# vvcm-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  pyproject.toml
.github/workflows/: release.yml
examples/: basic_fk.rs  fk_timing.rs
include/: vvcm_rs.h  vvcm_rs.hpp
python/vvcm_rs/: __init__.py  __init__.pyi
scripts/: package_vcpkg_native.py  package_vcpkg_prebuilt_port.py  package_wasm_npm.py  sync_versions.py
src/: error.rs  ffi.rs  fk.rs  lib.rs  manual_simulation.rs  math.rs  python.rs  simulation.rs  types.rs  wasm.rs
tests/: cpp_export_smoke.cpp  cpp_export_smoke.rs  fk_smoke.rs  simulation_smoke.rs  wasm_bindings.rs
tests/python/: test_bindings.py
vcpkg/ports/vvcm-rs/: portfile.cmake  usage  vcpkg.json
vcpkg/prebuilt-ports/vvcm-rs/: portfile.cmake.in  vcpkg.json  vvcm-rs-config.cmake
wasm/: .npmignore  README.md  index.d.ts  index.js  package.json  tsconfig.json
wasm/tests/: typescript-smoke.ts
