[package]
name = "vvcm-rs"
version = "2.0.0"
edition = "2024"
description = "Kinematics of multi-robot transporting systems with a deformable sheet using VVCM."
authors = ["MorningFrog <1098224028@qq.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/morningfrog/vvcm-rs"
homepage = "https://github.com/morningfrog/vvcm-rs"
documentation = "https://docs.rs/vvcm-rs"
keywords = ["kinematics", "robotics", "vvcm", "deformable-sheet"]
categories = ["algorithms", "science", "simulation"]

[lib]
name = "vvcm_rs"
crate-type = ["rlib", "cdylib", "staticlib"]

[features]
default = []
python-extension = ["pyo3/extension-module"]

[dependencies]
nalgebra = "0.35.0"
pyo3 = "0.28.3"
thiserror = "2.0.18"

[dev-dependencies]
cc = "1.2.63"
